--- a/src/features/TripCard/TripCard.module.scss
+++ b/src/features/TripCard/TripCard.module.scss
@@ -17,8 +17,13 @@
     min-height: unset;
   }
 
+  @include mobile {
+    width: 100%;
+  }
+
   @include laptop {
-    width: 368px;
+    width: 100%;
+    max-width: 368px;
   }
 }
 
@@ -96,7 +101,7 @@
   color: $color-dark-blue;
   margin: 4px 0;
 
-  @include mobile-tablet {
+  @include mobile-laptop {
     font-size: 16px;
     line-height: 20px;
   }
