--- a/src/pages/TripOffersPage/TripOffersPage.module.scss
+++ b/src/pages/TripOffersPage/TripOffersPage.module.scss
@@ -1,8 +1,10 @@
 @use 'styles/style.scss' as *;
+
 .tripOffersPage {
   position: relative;
   padding: 170px 0 0;
 }
+
 .bg {
   background-position: center;
   background-repeat: no-repeat;
@@ -13,26 +15,48 @@
   left: 0;
   right: 0;
   z-index: 0;
+
+  @include mobile {
+    background-size: auto;
+  }
 }
 
 .title {
   color: $color-white;
   font-size: 56px;
-  margin: 0 165px;
+  padding-left: 165px;
   font-weight: $fw-bold;
   line-height: 67px;
   z-index: 1;
   position: relative;
+
+  @include mobile-tablet {
+    padding-left: 44px;
+  }
+
+  @include mobile {
+    padding: 0 32px;
+  }
 }
+
 .subTitle {
-  width: 835px;
-  margin: 0 165px;
+  width: 100%;
+  max-width: 835px;
+  padding-left: 165px;
   color: $color-white;
   font-size: 12px;
   font-weight: $fw-regular;
   line-height: 20px;
   position: relative;
   z-index: 1;
+
+  @include mobile-tablet {
+    padding-left: 44px;
+  }
+
+  @include mobile {
+    padding: 0 32px;
+  }
 }
 
 .filters {
@@ -44,6 +68,10 @@
   position: relative;
   margin: 30px auto 0;
   z-index: 1;
+
+  @include mobile {
+    padding: 20px 22px 20px 20px;
+  }
 }
 
 .filterTitle {
@@ -51,6 +79,7 @@
   font-weight: $fw-bold;
   line-height: 24px;
   margin-bottom: 22px;
+
 }
 
 .viewIcon {
@@ -61,6 +90,7 @@
   cursor: pointer;
   border-radius: 5px;
 }
+
 .viewSelected {
   background-color: $color-laros-light-grey;
 }
@@ -71,11 +101,26 @@
   flex-wrap: wrap;
   width: 80%;
   margin: 80px auto 80px;
+
+  @include mobile-tablet {
+    margin: 0 auto;
+    padding: 80px 0;
+  }
 }
+
 .grid {
   display: grid;
   grid-template-columns: 32% 32% 32%;
   gap: 25px;
+
+  @include mobile-tablet {
+    grid-template-columns: 48% 48%;
+  }
+
+  @include mobile {
+    grid-template-columns: 96%;
+    justify-content: center;
+  }
 }
 
 .list {
@@ -83,29 +128,62 @@
   grid-template-columns: 100%;
   gap: 25px;
 }
+
 .filterSelects {
-  width: 1020px;
+  width: 100%;
+  max-width: 1020px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  & > div {
-    width: calc(1004px / 3);
+  gap: 10px;
+
+  &>div {
+    width: 100%;
+    max-width: calc(1004px / 3);
+  }
+
+  @include mobile-laptop {
+    gap: 5px;
+  }
+
+  @include mobile-tablet {
+    flex-direction: column;
+    gap: 10px;
   }
 }
+
 .filterContent {
   display: flex;
   align-items: center;
+  justify-content: flex-start;
   margin-bottom: 24px;
+
+  @include mobile-tablet {
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
 }
+
 .sort {
   display: flex;
   align-items: center;
+
+  @include mobile-tablet {
+    width: 100%;
+    max-width: calc(1004px / 3);
+  }
 }
+
 .sortFrom {
   font-size: 14px;
   font-weight: $fw-regular;
   line-height: 17px;
   margin: 0 9px 0 24px;
+
+  @include mobile-tablet {
+    margin: 0 9px 0 0
+  }
 }
 
 .select {
@@ -118,10 +196,12 @@
     border-radius: 8px;
     background-color: $color-white;
   }
+
   [class$='-ValueContainer'] {
     height: 32px;
     overflow-y: scroll;
   }
+
   [class$='-multiValue'] {
     border-radius: 8px;
     background-color: $color-laros-light-grey;
@@ -129,6 +209,7 @@
     font-weight: $fw-regular;
     line-height: 20px;
   }
+
   [class$='-placeholder'] {
     color: $color-primary-black;
   }
@@ -142,11 +223,21 @@
 
 .viewSwitch {
   padding: 15px 0 0;
+  display: flex;
+
+  @include mobile {
+    display: none;
+  }
 }
 
 .tagSwitchFilters {
   display: flex;
   justify-content: space-between;
+
+  @include mobile-tablet {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .button {
