--- a/src/features/ContactForm/ContactForm.module.scss
+++ b/src/features/ContactForm/ContactForm.module.scss
@@ -6,15 +6,29 @@
   border-radius: 16px;
   background-color: $color-white;
   display: flex;
+
+  @include mobile-laptop {
+    flex-direction: column;
+  }
 }
 
 .main {
   padding: 40px 58px 0 61px;
+
+  @include mobile {
+    padding: 3px;
+  }
 }
 
 .title {
   font-size: 24px;
   font-weight: $fw-semibold;
+
+  @include mobile {
+    margin-top: 10px;
+    padding-left: 10px;
+    font-size: 20px;
+  }
 }
 
 .description {
@@ -22,6 +36,10 @@
   font-weight: $fw-regular;
   color: $color-checkbox-gray;
   margin-top: 8px;
+
+  @include mobile {
+    padding-left: 10px;
+  }
 }
 
 .form {
@@ -58,6 +76,10 @@
   display: flex;
   flex-wrap: wrap;
   margin: 10px 10px 0 0;
+
+  @include mobile-laptop {
+    margin: 0;
+  }
 }
 
 .infoItem {
@@ -119,6 +141,10 @@
 
 .contactMain {
   width: 543px;
+
+  @include mobile-laptop {
+    width: 100%;
+  }
 }
 
 .contactTitle {
@@ -140,6 +166,10 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+
+    @include mobile-tablet {
+      margin-bottom: 8px;
+    }
 
     & .infoIcon {
       padding: 0;
@@ -166,8 +196,26 @@
         right: 24px;
         bottom: 36px;
         width: 120px;
+
+        @include mobile {
+          right: 10px;
+        }
       }
     }
+  }
+
+  @include mobile-tablet {
+    display: block;
+    margin-bottom: 5px;
+    padding: 10px;
+  }
+
+  @include mobile {
+    padding: 3px;
+  }
+
+  @include laptop {
+    grid-template-columns: 1fr 50%;
   }
 }
 
