--- a/src/features/AboutLayout/AboutLayout.module.scss
+++ b/src/features/AboutLayout/AboutLayout.module.scss
@@ -11,7 +11,7 @@
 }
 
 .bg {
-  background-position: top;
+  background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
