--- a/src/pages/HotelPage/RoomCards/RoomCards.module.scss
+++ b/src/pages/HotelPage/RoomCards/RoomCards.module.scss
@@ -3,6 +3,7 @@
 .roomCards {
   padding: 80px 0 100px;
   background-color: $color-primary-dark-blue;
+  margin-bottom: 80px;
   color: $color-white;
 }
 
