--- a/src/features/ApplyModal/ApplyModal.module.scss
+++ b/src/features/ApplyModal/ApplyModal.module.scss
@@ -35,7 +35,7 @@
     border-radius: 4px;
     line-height: 22px;
     height: 40px;
-    padding: 10px 20px;
+    padding: 10px;
     box-sizing: border-box;
     border: none;
     margin: 0;
@@ -56,6 +56,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     max-width: 150px;
+    margin-left: 5px;
   }
 }
 
@@ -77,7 +78,7 @@
 }
 
 .fileTypes {
-  color: $color-laros-light-grey;
+  color: $color-modal-bg;
   font-weight: 500;
   font-size: 10px;
   line-height: 12px;
