--- a/src/pages/AboutPage/AboutPage.module.scss
+++ b/src/pages/AboutPage/AboutPage.module.scss
@@ -15,11 +15,10 @@
   }
 }
 .containerWrap {
-  background-image: url("/assets/images/aboutPage/background.png");
-  background-size: cover;
+  background-image: url('/assets/images/aboutPage/background.png');
   background-repeat: no-repeat;
   padding-bottom: 80px;
-    @include mobile {
+  @include mobile {
     padding: 0;
   }
 }
@@ -56,7 +55,7 @@
   }
 }
 
-.subDesc {
+.desc {
   text-align: left;
 }
 
@@ -118,8 +117,8 @@
 }
 
 .textJustify {
-  text-align: justify;
-  margin: 80px 0 88px 0;
+  max-width: 850px;
+  margin: 10px auto 88px;
   color: $color-bg-black;
 
   @include mobile-tablet {
