--- a/src/pages/DestinationInfoPage/Overview/Overview.module.scss
+++ b/src/pages/DestinationInfoPage/Overview/Overview.module.scss
@@ -2,18 +2,18 @@
 @import '/src/styles/theme/breakpoints.scss';
 
 .overview {
-  padding: 80px 0 110px;
+  padding: 80px 0 0;
 
   @include laptop {
-    padding: 50px 0 50px;
+    padding: 50px 0 0;
   }
 
   @include tablet {
-    padding: 40px 30px 30px;
+    padding: 40px 30px 0;
   }
 
   @include mobile {
-    padding: 30px 10px 20px;
+    padding: 30px 10px 0;
   }
 }
 
@@ -45,8 +45,9 @@
 .image {
   width: 100%;
   height: 500px;
-  max-width: 800px;
-
+  border-radius: 8px;
+  overflow: hidden;
+  background-color: $color-modal-bg;
   img {
     border-radius: 8px;
   }
