--- a/src/pages/HomePage/SelectedType/SliderItem/SliderItem.module.scss
+++ b/src/pages/HomePage/SelectedType/SliderItem/SliderItem.module.scss
@@ -9,6 +9,7 @@
   position: relative;
   border-radius: 8px;
   background-color: #ccc;
+  overflow: hidden;
 }
 
 .hover {
@@ -65,6 +66,7 @@
   height: 100%;
   display: flex;
   text-align: center;
+  background-color: $color-bg-gallery-2;
 }
 
 .subtitle {
