--- a/src/pages/HotelPage/Facility/Facility.module.scss
+++ b/src/pages/HotelPage/Facility/Facility.module.scss
@@ -7,12 +7,16 @@
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  @include mobile {
+    padding: 50px 20px;
+  }
 }
 
 .facilityTitle {
   font-size: 16px;
   font-weight: $fw-bold;
   line-height: 20px;
+  margin-bottom: 20px;
 }
 
 .facilitySubTitle {
@@ -28,6 +32,12 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+
+  @include mobile {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .facilityCard {
@@ -46,6 +56,11 @@
   &:nth-child(5n + 4),
   &:nth-child(5n + 5) {
     width: 45.7%;
+  }
+  @include mobile {
+    width: 80%;
+    flex-direction: column;
+    align-items: center;
   }
 }
 
