--- a/src/pages/HotelPage/HotelImages/HotelImages.module.scss
+++ b/src/pages/HotelPage/HotelImages/HotelImages.module.scss
@@ -1,3 +1,5 @@
+@use 'styles/style' as *;
+
 .hotelImages {
   margin-bottom: 80px;
 }
@@ -5,6 +7,9 @@
 .hotelImage {
   width: 100%;
   height: 500px;
+  border-radius: 8px;
+  overflow: hidden;
+  background-color: $color-modal-bg;
 
   img {
     border-radius: 8px;
