--- a/src/pages/HotelPage/HotelIntro/HotelIntro.module.scss
+++ b/src/pages/HotelPage/HotelIntro/HotelIntro.module.scss
@@ -12,6 +12,8 @@
   @include mobile-tablet {
     flex-direction: column;
     margin: 0;
+    padding: 0 10px;
+    border-radius: 0;
   }
 }
 
@@ -57,12 +59,15 @@
   color: $color-laros-dark-grey;
   margin: 17px 0 8px;
 }
-
+.forms {
+  margin-top: 16px;
+}
 .name {
   font-size: 48px;
   font-weight: $fw-bold;
   line-height: 58px;
   color: $color-bg-black;
+  margin-bottom: 16px;
 
   @include laptop {
     font-size: 35px;
@@ -73,19 +78,6 @@
   @include mobile {
     font-size: 16px;
     line-height: 25px;
-  }
-}
-
-.description {
-  margin-top: 16px;
-  height: 65px;
-  padding-right: 20px;
-  overflow: hidden;
-  overflow-y: scroll;
-  margin-bottom: 20px;
-
-  @include mobile-tablet {
-    padding-right: 0;
   }
 }
 
