--- a/src/pages/TravelPlannerPage/CategoryCard/CategoryCard.module.scss
+++ b/src/pages/TravelPlannerPage/CategoryCard/CategoryCard.module.scss
@@ -10,6 +10,13 @@
   justify-content: center;
   overflow: hidden;
   background-color: $color-modal-bg;
+  .shadow {
+    background-color: $color-bg-gallery-2;
+    position: absolute;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+  }
 
   &:hover .image {
     display: none;
@@ -21,6 +28,7 @@
 
   &:hover .description {
     display: block;
+    text-align: center;
   }
 
   &:hover {
@@ -50,7 +58,6 @@
       font-weight: $fw-regular;
       line-height: 17px;
       text-align: left;
-      background-color: red;
     }
   }
 
