--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -21,6 +21,7 @@ $color-primary-black: #1b242d;
 $color-light-black: #333;
 $color-bg-black: #1b242d;
 $color-bg-gallery: rgba(0, 0, 0, 0.9);
+$color-bg-gallery-2: rgba(0, 0, 0, 0.3);
 $color-layout-blue: rgba(0, 60, 118, 0.75);
 $color-layout-light-blue: rgba(0, 60, 118, 0.15);
 $color-layout-light-blue-2: rgba(0, 60, 118, 0.25);
