--- a/src/features/Header/Header.module.scss
+++ b/src/features/Header/Header.module.scss
@@ -164,6 +164,7 @@
 
 /* General */
 .hamburger {
+  display: none;
   position: absolute;
   left: 20px;
   width: 15px;
@@ -172,8 +173,8 @@
   transition: 0.5s;
   border-radius: 30px;
   z-index: 9999;
-  @include tablet-desktop {
-    display: none;
+  @include mobile {
+    display: block;
   }
 }
 
