--- a/src/features/RequestsLayout/RequestsLayout.module.scss
+++ b/src/features/RequestsLayout/RequestsLayout.module.scss
@@ -1,4 +1,5 @@
 @use 'styles/style.scss' as *;
+@import '/src/styles/theme/breakpoints.scss';
 
 .requestLayout {
   margin-bottom: 80px;
@@ -26,8 +27,8 @@
   color: $color-white;
   padding-top: 245px;
 
-  @media screen and (max-width: 850px) {
-    padding-top: 140px;
+  @include mobile {
+    padding-top: 100px;
   }
 }
 
@@ -40,7 +41,7 @@
   margin: auto;
   padding-top: 50px;
 
-  @media screen and (max-width: 850px) {
+  @include mobile {
     padding: 40px 10px 0;
   }
 }
@@ -53,6 +54,11 @@
   background-color: $color-white;
   box-shadow: $color-box-shadow;
   border-radius: 16px;
+
+  @include mobile {
+    margin-top: -220px;
+    width: 100%;
+  }
 
   @media screen and (min-width: 500px) and (max-width: 850px) {
     margin-top: -230px;
@@ -67,7 +73,7 @@
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.02), rgba(0, 0, 0, 0.02)),
     linear-gradient(0deg, $color-light-grey, $color-light-grey);
 
-  @media screen and (max-width: 850px) {
+  @include mobile {
     padding: 0 10px 10px;
     height: unset;
   }
