--- a/src/features/SendBrochuresModal/Card/Card.module.scss
+++ b/src/features/SendBrochuresModal/Card/Card.module.scss
@@ -36,7 +36,7 @@
   border-radius: 0 0 16px 16px;
 }
 .name {
-  font-family: Lato;
+  font-family: $font-Lato;
   font-size: 12px;
   font-weight: $fw-semibold;
   margin-top: 4px;
