--- a/src/features/SendBrochuresModal/SendBrochuresModal.module.scss
+++ b/src/features/SendBrochuresModal/SendBrochuresModal.module.scss
@@ -11,7 +11,7 @@
   position: relative;
 }
 .title {
-  font-family: Lato;
+  font-family: $font-Lato;
   font-size: 14px;
   font-weight: $fw-regular;
 }
@@ -27,6 +27,53 @@
   margin-top: 36px;
   width: 674px;
 }
+
+.input {
+  height: 63px;
+  width: 100%;
+  flex-direction: column;
+  align-items: start;
+  justify-content: start;
+  padding-left: 16px;
+  padding-top: 12px;
+
+  [class*='icon'] {
+    right: 18px;
+  }
+
+  input::placeholder {
+    color: $color-primary-black;
+  }
+
+  > * {
+    padding-left: 0;
+  }
+
+  @media screen and (max-width: 850px) {
+    width: 100%;
+    margin-bottom: 15px;
+  }
+}
+.phoneInputWrap {
+  position: relative;
+}
+.phoneInput {
+}
+.phonePlaceholder {
+  position: absolute;
+  top: 34px;
+  left: 18px;
+  color: $color-placeholder;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 17px;
+  text-align: left;
+  pointer-events: none;
+  span {
+    color: black;
+  }
+}
+
 .formTitle {
   margin-bottom: 16px;
 }
@@ -36,7 +83,7 @@
   padding: 13px 8px 29px;
 }
 .radioLabel {
-  font-family: Lato;
+  font-family: $font-Lato;
   font-size: 12px;
   font-weight: $fw-medium;
   color: $color-placeholder;
@@ -56,7 +103,7 @@
   flex-wrap: wrap;
 }
 .adressTitle {
-  font-family: Lato;
+  font-family: $font-Lato;
   font-size: 12px;
   font-weight: $fw-medium;
   color: $color-placeholder;
@@ -66,7 +113,7 @@
 .adressZip,
 .adressStreet,
 .addressRegion {
-  font-family: Lato;
+  font-family: $font-Lato;
   font-size: 14px;
   font-weight: $fw-semibold;
   padding: 0 8px 8px 8px;
@@ -85,7 +132,7 @@
   padding-bottom: 40px;
 }
 .downloadBtn {
-  width: 79px;
+  width: 120px;
 }
 .addressIcon1 {
   position: absolute;
