--- a/src/pages/HotelPage/RoomCards/RoomCard/RoomCard.module.scss
+++ b/src/pages/HotelPage/RoomCards/RoomCard/RoomCard.module.scss
@@ -6,6 +6,7 @@
   color: $color-primary-black;
   border-radius: 8px;
   text-align: center;
+  height: 100%;
 }
 .roomCardImage {
   margin-bottom: 10px;
