--- a/src/pages/VoucherPage/VoucherPage.module.scss
+++ b/src/pages/VoucherPage/VoucherPage.module.scss
@@ -5,11 +5,16 @@
   text-align: center;
   position: relative;
 }
+
 .bg {
   height: 500px;
   width: 100%;
   background-size: cover;
   background-position: center;
+
+  @include mobile-laptop {
+    display: none;
+  }
 }
 
 .step2Wrapper {
@@ -18,6 +23,7 @@
   margin-top: 21px;
   margin-left: 172px;
 }
+
 .arrow {
   margin-right: 14px;
 }
