--- a/src/features/RequestsLayout/RequestsLayout.module.scss
+++ b/src/features/RequestsLayout/RequestsLayout.module.scss
@@ -76,6 +76,7 @@
   @include mobile {
     padding: 0 10px 10px;
     height: unset;
+    flex-direction: column;
   }
 }
 
@@ -128,12 +129,14 @@
     margin-right: 30px;
   }
 
-  @media screen and (max-width: 1024px) {
+  @include tablet-laptop {
     margin-right: 15px;
   }
 
-  @media screen and (max-width: 850px) {
+  @include mobile {
+    padding: 15px 15px 0;
     margin: 0;
+    display: flex;
   }
 }
 
