--- a/src/pages/TripOffersPage/TripOffersPage.module.scss
+++ b/src/pages/TripOffersPage/TripOffersPage.module.scss
@@ -1,4 +1,5 @@
 @use 'styles/style.scss' as *;
+@import '/src/styles/theme/breakpoints.scss';
 
 .tripOffersPage {
   position: relative;
@@ -79,7 +80,6 @@
   font-weight: $fw-bold;
   line-height: 24px;
   margin-bottom: 22px;
-
 }
 
 .viewIcon {
@@ -137,7 +137,7 @@
   justify-content: space-between;
   gap: 10px;
 
-  &>div {
+  & > div {
     width: 100%;
     max-width: calc(1004px / 3);
   }
@@ -182,7 +182,7 @@
   margin: 0 9px 0 24px;
 
   @include mobile-tablet {
-    margin: 0 9px 0 0
+    margin: 0 9px 0 0;
   }
 }
 
@@ -190,6 +190,7 @@
   font-size: 12px;
   font-weight: $fw-regular;
   line-height: 20px;
+  min-width: 55px;
 
   [class$='-control'] {
     border: 1px solid $color-modal-bg;
