--- a/src/features/ContactFooterHero/ContactFooterHero.module.scss
+++ b/src/features/ContactFooterHero/ContactFooterHero.module.scss
@@ -1,4 +1,5 @@
 @use '/src/styles/style.scss' as *;
+@import '/src/styles/theme/breakpoints.scss';
 
 .contact {
   background: url('../../../public/assets/images/blogs/Frame442.png') center;
@@ -19,6 +20,17 @@
     line-height: 51px;
     text-align: center;
     padding-bottom: 30px;
+
+    @include tablet {
+      font-size: 55px;
+    }
+
+    @include mobile {
+      font-size: 40px;
+      line-height: 40px;
+      max-width: 250px;
+      padding-bottom: 40px;
+    }
   }
 
   & > button {
@@ -28,5 +40,13 @@
     left: 50%;
     transform: translate(-50%, -50%);
     cursor: pointer;
+
+    @include mobile {
+      top: 67%;
+    }
+  }
+
+  @include mobile {
+    height: 320px;
   }
 }
