--- a/src/features/Header/Header.module.scss
+++ b/src/features/Header/Header.module.scss
@@ -2,7 +2,7 @@
 @import '/src/styles/theme/breakpoints.scss';
 
 .header {
-  padding: 0 138px;
+  padding: 0 7%;
   display: flex;
   align-items: center;
   justify-content: space-between;
