--- a/src/pages/BlogsPage/BlogsPage.module.scss
+++ b/src/pages/BlogsPage/BlogsPage.module.scss
@@ -1,13 +1,16 @@
 @use '/src/styles/style.scss' as *;
+@import '/src/styles/theme/breakpoints.scss';
 
 .page {
   height: 100%;
   width: 100%;
   position: relative;
+  background-color: $color-white;
 }
+
 .pictures {
   width: 100%;
-  height: 628px;
+  height: 588px;
   background: url('../../../public/assets/images/blogs/header-bg.jpg') center;
   background-size: cover;
   display: flex;
@@ -19,10 +22,15 @@
     width: 100%;
     height: 100%;
   }
-}
 
-.blogItemWrapper {
-  padding: 7% 7% 7% 13%;
+  @include mobile {
+    display: none;
+  }
+
+  @include tablet {
+    padding: 60px 0 20px;
+    height: 320px;
+  }
 }
 
 .blogs {
@@ -31,6 +39,11 @@
   position: relative;
   margin: 0;
   padding: 0;
+  list-style-type: none;
+
+  @include mobile {
+    width: 100%;
+  }
 }
 
 .button {
@@ -53,32 +66,48 @@
 .sliderContainer {
   margin: 0 auto;
   width: 76%;
+
+  @include mobile {
+    width: 100%;
+    margin: 0;
+  }
 }
 
 .sliderCustom {
-  > div:nth-child(2) {
+  [class*='swiper-button-prev'] {
     top: 50%;
     left: -125px;
   }
 
-  > div:nth-child(3) {
+  [class*='swiper-button-next'] {
     top: 50%;
     right: -125px;
+  }
+
+  @include mobile {
+    width: 90%;
+    margin: 0 auto;
   }
 }
 
 .title {
   margin-bottom: 64px;
+
+  @include mobile {
+    margin-bottom: 30px;
+  }
 }
 
 .reviews {
-  height: 512px;
   background: $color-modal-header;
-  padding-top: 48px;
-  padding-bottom: 112px;
+  padding: 49px 0;
 
   .descr {
     color: $color-placeholder;
+
+    @include mobile-tablet {
+      text-align: center;
+    }
   }
 
   .title {
@@ -106,6 +135,22 @@
 
     & > div {
       margin: 12px;
+    }
+  }
+
+  @include mobile-tablet {
+    padding: 40px 10px 20px;
+  }
+}
+
+@include mobile-tablet {
+  .sliderCustom {
+    [class*='swiper-button-prev'] {
+      left: -35px;
+    }
+
+    [class*='swiper-button-next'] {
+      right: -35px;
     }
   }
 }
