--- a/src/features/DestinationMaps/Kykladen/Kykladen.module.scss
+++ b/src/features/DestinationMaps/Kykladen/Kykladen.module.scss
@@ -4,25 +4,32 @@
   position: relative;
   width: 1040px;
   height: 720px;
-  background: url('../../../../public/assets/images/destinations/Individual maps/Kykladen Inseln.png') no-repeat center;
+  background: url('../../../../public/assets/images/destinations/Individual maps/Kykladen Inseln.png')
+    no-repeat center;
   font-weight: $fw-semibold;
 }
 
-@media screen and (max-width:1350px) {
+.wrapper {
+  cursor: pointer;
+  position: absolute;
+  width: max-content;
+}
+
+@media screen and (max-width: 1350px) {
   .container {
-    transform: scale(.7);
+    transform: scale(0.7);
   }
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width: 768px) {
   .container {
-    transform: scale(.7);
+    transform: scale(0.7);
   }
 }
-@media screen and (max-width:425px) {
-  .container{
-    transform: scale(.3);
-height:400px;
+@media screen and (max-width: 425px) {
+  .container {
+    transform: scale(0.3);
+    height: 400px;
   }
 }
 .kea {
@@ -507,6 +514,11 @@ height:400px;
   top: 20%;
 }
 
+.regionCardamorgos {
+  bottom: 100%;
+  left: -250px;
+}
+
 .regionCardtinos {
   top: 20%;
 }
@@ -516,5 +528,21 @@ height:400px;
 }
 
 .regionCardmykonos {
-  top: 20%;
+  top: 100%;
+  left: -250px;
+}
+
+.regionCardkoufonissi {
+  bottom: 100%;
+  left: -250px;
+}
+
+.regionCardsantorini {
+  bottom: 100%;
+  left: -250px;
+}
+
+.regionCardanafi {
+  bottom: 100%;
+  left: -250px;
 }
