--- a/src/features/DestinationMaps/Peloponnes/Peloponnes.module.scss
+++ b/src/features/DestinationMaps/Peloponnes/Peloponnes.module.scss
@@ -4,25 +4,32 @@
   position: relative;
   width: 1040px;
   height: 720px;
-  background: url('../../../../public/assets/images/destinations/Individual maps/Peloponnes.png') no-repeat center;
+  background: url('../../../../public/assets/images/destinations/Individual maps/Peloponnes.png')
+    no-repeat center;
   font-weight: $fw-semibold;
 }
 
-@media screen and (max-width:1350px) {
+.wrapper {
+  cursor: pointer;
+  position: absolute;
+  width: max-content;
+}
+
+@media screen and (max-width: 1350px) {
   .container {
-    transform: scale(.8);
+    transform: scale(0.8);
   }
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width: 768px) {
   .container {
-    transform: scale(.7);
+    transform: scale(0.7);
   }
 }
-@media screen and (max-width:425px) {
-  .container{
-    transform: scale(.3);
-height:400px;
+@media screen and (max-width: 425px) {
+  .container {
+    transform: scale(0.3);
+    height: 400px;
   }
 }
 .patras {
@@ -260,7 +267,7 @@ height:400px;
   padding: 0 4px;
 }
 
-.charnoi {
+.chranoi {
   &::before {
     content: '';
     display: inline-block;
@@ -273,7 +280,7 @@ height:400px;
   }
 }
 
-.charnoiLocation {
+.chranoiLocation {
   position: absolute;
   top: 64%;
   right: 50%;
@@ -517,7 +524,8 @@ height:400px;
 }
 
 .regionCardaltepidaurus {
-  top: 20%;
+  top: 100%;
+  left: -250px;
 }
 
 .regionCardnapflio {
@@ -530,4 +538,9 @@ height:400px;
 
 .regionCardolympia {
   top: 20%;
+}
+
+.regionCardmonemvassia {
+  bottom: 100%;
+  left: -250px;
 }
