--- a/src/pages/HomePage/Subscribe/Subscribe.module.scss
+++ b/src/pages/HomePage/Subscribe/Subscribe.module.scss
@@ -7,6 +7,11 @@
   background-color: $color-primary-dark-blue;
   border-radius: 24px;
   color: $color-white;
+
+  @include mobile {
+    max-width: 100%;
+    border-radius: 0;
+  }
 }
 
 .title {
