--- a/src/pages/TravelPlannerPage/StaticTravelPlannerPage/Overview/Slider/Slider.module.scss
+++ b/src/pages/TravelPlannerPage/StaticTravelPlannerPage/Overview/Slider/Slider.module.scss
@@ -15,7 +15,7 @@
 
   color: $color-light-grey;
   padding-bottom: 35px;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .subtitle {
