--- a/src/pages/TripFormPage/Sidebar/Sidebar.module.scss
+++ b/src/pages/TripFormPage/Sidebar/Sidebar.module.scss
@@ -1,7 +1,6 @@
 @use 'styles/style.scss' as *;
 
 .sidebar {
-  width: 100%;
   background-color: $color-laros-light-grey;
   border-radius: 16px;
 }
@@ -20,7 +19,8 @@
   background-color: white;
   border-radius: 8px;
 }
-.section,.sectionTotal {
+.section,
+.sectionTotal {
   display: flex;
   align-items: center;
   padding: 8px 20px;
@@ -82,7 +82,6 @@
     color: $color-white-blue;
   }
 }
-
 
 // edit styles
 .calendar {
@@ -160,4 +159,3 @@
   display: flex;
   align-items: center;
 }
-
