--- a/src/pages/TripPage/Tab/TripPlan/TripPlan.module.scss
+++ b/src/pages/TripPage/Tab/TripPlan/TripPlan.module.scss
@@ -39,8 +39,19 @@
   line-height: 24px;
   text-align: left;
   margin-bottom: 16px;
+  display: flex;
 }
-
+.daysTitle {
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 24px;
+  text-align: left;
+  margin-right: 20px;
+  color: $color-range;
+  span {
+    color: $color-range-bg;
+  }
+}
 .description {
   font-size: 12px;
   font-weight: $fw-regular;
